--- a/_posts/2017-04-24-on-loss.md
+++ b/_posts/2017-04-24-on-loss.md
@@ -4,6 +4,8 @@ title: On Loss
 date: 2017-04-24
 ---
 
+# On Loss
+
 *In this post, I talk about losing a family member. It was difficult for me to write; it may be hard for some to read.*
 
 I've been thinking about farewells.
