--- a/_posts/2020-05-31-on-things.md
+++ b/_posts/2020-05-31-on-things.md
@@ -4,6 +4,8 @@ title: On Things
 date: 2020-05-31
 ---
 
+# On Things
+
 When I was a kid, I wanted to collect everything and anything under the sun. It never got to the point where I was carefully stepping over things in my childhood bedroom, but my bookshelves were full of random collectables. As I've gotten older, I've started to see things with new eyes, and realized that I was surrounded by things I haven't touched for years outside of my cleaning routine.
 
 Recently, I moved to a new address and took the opportunity to thoroughly go through my things. One item at a time. And I have to say that you don't realize how much you have until you have to move it all at once. It was more time consuming than I expected, and I don't want to go through that again for future moves.
