--- a/_posts/2020-08-14-on-money.md
+++ b/_posts/2020-08-14-on-money.md
@@ -8,13 +8,16 @@ date: 2020-08-14
 
 - Don't spend more than you earn.
   - You can't out earn bad spending habits.
-  - Dsicipline is needed at every level of income.
+  - Discipline is needed at every level of income.
 - Have a budget.
   - Give every dollar a job.
   - Reduce expenses whenever possible.
   - Be aware of how much luxury you can afford.
 - Build an emergency fund.
 - Be mindful of lifestyle creep.
+  - Everything costs more than the price tag you see.
+  - Maitenance costs.
+  - What is the annual cost of having this monthly subscription?
 - Self-development pays for itself in the long run.
 - Sometimes, you just need a better paying job.
   - Other times, you need to quit your current job due to stress, anxiety, time.
