--- a/_posts/2020-08-14-on-money.md
+++ b/_posts/2020-08-14-on-money.md
@@ -11,12 +11,16 @@ date: 2020-08-14
   - Discipline is needed at every level of income.
 - Have a budget.
   - Give every dollar a job.
-  - Reduce expenses whenever possible.
+  - Reduce expenses wherever and whenever possible.
   - Be aware of how much luxury you can afford.
+- Have a simple setup for bank and investment accounts.
+- Pay off debt.
 - Build an emergency fund.
+  - Dip into emergency fund only for emergencies! It is your safety net when shit hits the fan.
+  - If used, replenish when you have positive cashflow.
 - Be mindful of lifestyle creep.
   - Everything costs more than the price tag you see.
-  - Maitenance costs.
+  - Maintenance costs.
   - What is the annual cost of having this monthly subscription?
 - Self-development pays for itself in the long run.
 - Sometimes, you just need a better paying job.
