--- a/_posts/2014-02-14-markdown.md
+++ b/_posts/2014-02-14-markdown.md
@@ -4,34 +4,38 @@ title: Markdown
 date: 2014-02-14
 ---
 
-A few weeks ago, I came across this lightweight markup language called [Markdown](https://daringfireball.net/projects/markdown/). It is a syntax used on plain text to indicate various kinds of formatting you want to apply when it is converted into another format.
+![](/assets/posts/2014-02-14-markdown.png)
 
-I like that you can signify formatting for plain text without leaving the keyboard. It has a small learning curve; you only need to learn where to put asterisks (`*`), dashes (`-`), backticks (`` ` ``), and pound signs (`#`) to format text. For example, you use `*single asterisks*` surrounding text to *emphasize* it. Keeps notes simple to write and easy to read.
+A few weeks ago, I came across a markup language called [Markdown](https://daringfireball.net/projects/markdown/). It is a lightweight syntax used on plain text to indicate various common formatting elements when it is rendered.
 
-Markdown still has many of the same limitations as plain text. However, it provides a way to create simple tables. Here is an example of a table using Markdown syntax:
+Although I like the idea of taking all my notes in plain text, I need to structure my notes better. It is difficult to scan and read a wall of text. Need to throw in some headings, emphasis, and dividers to break it up. I'd attempted to create my own syntax, but that was a miserable failure. Just couldn't commit to any of my ideas. Discovering Markdown couldn't have come at a better time.
+
+Markdown still has many of the same limitations as plain text. However, it provides a way to create simple tables, which is a *huge* plus for me. Here is an example of a table using Markdown syntax:
 
 ```
-| Level | Talent 1          | Talent 2           | Talent 3          |
-| ----- | ----------------- | ------------------ | ----------------- |
-| 56    | Rolling Blood     | Plague Leech       | Unholy Blight     |
-| 57    | Lichborne         | Anti-Magic Zone    | Purgatory         |
-| 58    | Death's Advance   | Chillblains        | Asphyxiate        |
-| 60    | Death Pact        | Death Siphon       | Conversion        |
-| 75    | Blood Tap         | Runic Empowerment  | Runic Corruption  |
+| Level | Talent 1          |      Talent 2      |          Talent 3 |
+|-------|:------------------|:------------------:|------------------:|
+| 56    | Rolling Blood     |    Plague Leech    |     Unholy Blight |
+| 57    | Lichborne         |  Anti-Magic Zone   |         Purgatory |
+| 58    | Death's Advance   |    Chillblains     |        Asphyxiate |
+| 60    | Death Pact        |    Death Siphon    |        Conversion |
+| 75    | Blood Tap         | Runic Empowerment  |  Runic Corruption |
 | 90    | Gorefiend's Grasp | Remorseless Winter | Desecrated Ground |
 ```
 
 And it will output a table like this:
 
-| Level | Talent 1          | Talent 2           | Talent 3          |
-| ----- | ----------------- | ------------------ | ----------------- |
-| 56    | Rolling Blood     | Plague Leech       | Unholy Blight     |
-| 57    | Lichborne         | Anti-Magic Zone    | Purgatory         |
-| 58    | Death's Advance   | Chillblains        | Asphyxiate        |
-| 60    | Death Pact        | Death Siphon       | Conversion        |
-| 75    | Blood Tap         | Runic Empowerment  | Runic Corruption  |
+| Level | Talent 1          |      Talent 2      |          Talent 3 |
+|-------|:------------------|:------------------:|------------------:|
+| 56    | Rolling Blood     |    Plague Leech    |     Unholy Blight |
+| 57    | Lichborne         |  Anti-Magic Zone   |         Purgatory |
+| 58    | Death's Advance   |    Chillblains     |        Asphyxiate |
+| 60    | Death Pact        |    Death Siphon    |        Conversion |
+| 75    | Blood Tap         | Runic Empowerment  |  Runic Corruption |
 | 90    | Gorefiend's Grasp | Remorseless Winter | Desecrated Ground |
 
-For the past few months, I've been using plain text notes. However, I've been looking for a way to logically break up my notes in sections—it is difficult to read walls of text. I'd attempted to create my own syntax to structure my content, but could never fully commit to a method. Discovering Markdown couldn't have come at a better time for me.
+Thankfully, it was easy to incorporate Markdown into my existing workflow. I can still focus on my work rather than on formatting or any other distractions with a word processor. There is just a bit of markup I have to add alongside my writing, which is unobtrusive even when the file is unrendered.
 
-It was easy to incorporate Markdown into my existing workflow. I can still completely focus on my content rather than on formatting tools because I am still technically working in plain text. It just has a little bit of markup added to it.
+Plain text is beautiful, but Markdown makes it even better. A valuable addition to my digital toolbox.
+
+Try it out yourself on [Dillinger](https://dillinger.io/), an online open-source Markdown editor.
