--- a/_posts/2017-04-24-on-loss.md
+++ b/_posts/2017-04-24-on-loss.md
@@ -8,9 +8,9 @@ date: 2017-04-24
 
 I've been thinking about farewells.
 
-Last week, I visited my grandmother. It was strange to see her looking small and fragile in her hospital bed. Piled underneath layers of thick blankets to stave off the cold. Occasionally, she'd open her eyes and whisper out a question which, with her shortness of breath, was often inaudible. But her mind was still sharp. Her eyes were still focused. Instead of asking her to repeat herself, we'd answer the question we thought she had asked. And whenever we answered, she'd slowly nod with her eyes closed.
+Last week, I visited my grandmother. It was strange to see her looking small and fragile in her hospital bed. Piled underneath layers of thick blankets to stave off the cold. Occasionally, she'd open her eyes and whisper out a question that was often inaudible with her shortness of breath. But her mind was still sharp. Her eyes were still focused. Instead of asking her to repeat herself, we'd answer the question we thought she had asked. And whenever we answered, she'd slowly nod with her eyes closed.
 
-I always thought that my grandmother was one of those people who would never be knocked down by life. She had always stool tall, with a sharp mind and tongue to match. Dressed up to the nines. Elegantly holding a cigarette between her long fingers. A timeless woman.
+I always thought that my grandmother was one of those people who would never be knocked down by life. She had always stood tall, with a sharp mind and tongue to match. Dressed up to the nines. Elegantly holding a cigarette between her long fingers. A timeless woman.
 
 I knew it was the last time I would see her alive. Maybe I was selfish, but I didn't think I could've handled seeing her condition deteriorate more. And I think she knew that too because when I started to pull away from our last hug, she held on tighter for a long moment, let out a rattling sigh, then gave me a kiss and let me go with tears in her eyes.
 
