--- a/_posts/2020-08-14-on-money.md
+++ b/_posts/2020-08-14-on-money.md
@@ -4,23 +4,24 @@ title: On Money
 date: 2020-08-14
 ---
 
+![](/assets/posts/2020-08-14-on-money.jpg)
+
 - Don't spend more than you earn.
-  - You can't out earn bad spending habits.
+  - You can't out-earn bad spending habits.
   - Discipline is needed at every level of income.
 - Have a budget.
   - Give every dollar a job.
   - Reduce expenses wherever and whenever possible.
   - Be aware of how much luxury you can afford.
-- Have a simple setup for bank and investment accounts.
 - Pay off debt.
-- Build an emergency fund.
-  - Dip into emergency fund only for emergencies! It is your safety net when shit hits the fan.
-  - If used, replenish when you have positive cash flow.
+- Have an emergency fund.
+- Live small.
+  - Big things cost more and tend to have hidden expenses.
+  - For example, a large house will cost more to heat and cool than a smaller home.
 - Be mindful of lifestyle creep.
-  - Everything costs more than the price tag you see.
-  - Maintenance costs.
+  - Everything costs more than the price tag you see—maintenance costs.
   - What is the annual cost of having this monthly subscription?
 - Self-development pays for itself in the long run.
-- Sometimes, you just need a better paying job.
+- Sometimes, you just need a better-paying job.
   - Other times, you need to quit your current job due to stress, anxiety, time.
   - What is more valuable to you?
