--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,11 +4,8 @@ title: Page Not Found
 permalink: /404
 ---
 
-# Page Not Found
-
 Something's not quite right...
 
 - Return to [home](/) page?
-- Report this <a href="{{ site.repo}}/issues" title="Git repository issue page.">issue</a>?
+- Report this <a href="{{ site.repo}}/issues" title="Git repository issue page">issue</a>?
 
-![An image of a construction zone.](/assets/page-404.jpg)
