--- a/_posts/2020-05-31-on-things.md
+++ b/_posts/2020-05-31-on-things.md
@@ -4,18 +4,10 @@ title: On Things
 date: 2020-05-31
 ---
 
-When I was a kid, I wanted to collect anything and everything under the sun. It never got to the point where I was carefully stepping over things in my childhood bedroom, but my bookshelves were full of random collectibles. As I've gotten older, I've started to see things with new eyes and realized that I surrounded myself with things I haven't touched for years outside of my cleaning routine.
+When I was a kid, I wanted to collect anything and everything. It never got to the point where I was carefully stepping over stuff in my childhood bedroom, but my shelves were full of random collectibles and knickknacks.  In hindsight, this might explain why I hated dusting as a chore.
 
-Recently, I moved to a new address and took the opportunity to go through my things thoroughly—one item at a time. And I have to say that you don't realize how much you have until you have to move it all at once. It was more time-consuming than I expected, and I don't want to go through that again for future moves.
+Recently, I moved to a new address and took the moving opportunity to audit my things—one item at a time. It was more time-consuming than I expected, and I don't want to go through that again for future moves.
 
-Felt a lot of nostalgia going through old keepsakes and souvenirs. But mostly, I felt a sense of relief getting rid of most of them, along with a lot of other miscellaneous items. They were extremely important to me when I was younger but don't fit into the vision I have for my life going into the future.
-
-Thankfully, I didn't have a difficult time purging things. I know that some people have a rough time with that process when decluttering or tidying up.
-
-Something remarkable to me was the number of nice things that I was keeping around unused because I was waiting for a special occasion. Why wait to use something that makes me happy when I can be using it every day? I already have this scented candle, and I might as well burn it and enjoy the scent. It makes me think of people who have fine china they keep behind glass cabinets while they eat off chipped plates or have brand new towels in the linen closet while using threadbare ones. It doesn't make sense.
-
-As I got rid of things and freed up more space in my life, the more I became focused on what was left. Things that I highly value and found worth keeping. Things that make my everyday life more enjoyable or run more smoothly than if I didn't have them.
+Thankfully, I didn't have a difficult time purging things. Although I felt a sense of nostalgia going through old keepsakes and souvenirs, I mostly felt a sense of relief getting rid of them. I know that some people have a rough time with this process when decluttering. For myself, I took a picture of some items before getting rid of them, and I think that was sufficient as a keepsake for me.
 
 I don't want my life to be full of stuff. I want my life to be full of remarkable experiences and happy memories.
-
-Also, as morbid as it sounds, I'm thinking about what would happen to my stuff when I'm dead and gone. Who will have to go through my things and decide what to keep and trash? I wouldn't want to be dealing with figuring out what to do with a loved one's stuff while going through the grieving process. That's just too much. It makes me want to see how many things I can live without to live a happy and productive life.
