Add image to 404 page

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -9,3 +9,4 @@ Something's not quite right...
 - Return to [home](/) page?
 - Report this <a href="{{ site.repo}}/issues" title="Git repository issue page">issue</a>?
 
+![](/assets/page-404.png)
